Edit link maps 2

--- a/index.html
+++ b/index.html
@@ -586,7 +586,7 @@
                     <p class="event-time">07:00 WIB</p>
                     <p class="event-location">Kediaman Mempelai Wanita : <br>
                         Jl. Balai Desa No.6, Losari Timur, Dusun Simpang RT 38 RW 08, Sidoharjo, Kec. Gedeg, Kabupaten Mojokerto, Jawa Timur</p>
-                   <a href="https://www.google.com/maps/@-7.4482783,112.4316055,3a,75y,171.14h,75.22t/data=!3m7!1e1!3m5!1sXodTMRfqi6Ep4aIWmW9mOw!2e0!6shttps:%2F%2Fstreetviewpixels-pa.googleapis.com%2Fv1%2Fthumbnail%3Fcb_client%3Dmaps_sv.tactile%26w%3D900%26h%3D600%26pitch%3D14.779220662672216%26panoid%3DXodTMRfqi6Ep4aIWmW9mOw%26yaw%3D171.1358581884293!7i16384!8i8192?entry=ttu&g_ep=EgoyMDI1MDgwNS4wIKXMDSoASAFQAw%3D%3D" class="event-button" target="_blank"><i class="fas fa-map-marker-alt"></i> Lihat Lokasi</a>
+                   <a href="https://www.google.com/maps/place/Jl.+Balai+Desa+No.6,+Losari+Timur,+Sidoharjo,+Kec.+Gedeg,+Kabupaten+Mojokerto,+Jawa+Timur+61351/@-7.4481914,112.4288452,17z/data=!3m1!4b1!4m5!3m4!1s0x2e780dff1a2720c7:0x896e3f324491594e!8m2!3d-7.4481914!4d112.4314201?entry=ttu&g_ep=EgoyMDI1MDYzMC4wIKXMDSoASAFQAw%3D%3D" class="event-button" target="_blank"><i class="fas fa-map-marker-alt"></i> Lihat Lokasi</a>
                  </div>
             </div>
             <div class="col-md-5 fade-in-up fade-delay-1">
@@ -599,7 +599,7 @@
                      <p class="event-location">Kediaman Mempelai Wanita : <br>
                         
                         Jl. Balai Desa No.6, Losari Timur, Dusun Simpang RT 38 RW 08, Sidoharjo, Kec. Gedeg, Kabupaten Mojokerto, Jawa Timur</p>
-                        <a href="https://www.google.com/maps/@-7.4482783,112.4316055,3a,75y,171.14h,75.22t/data=!3m7!1e1!3m5!1sXodTMRfqi6Ep4aIWmW9mOw!2e0!6shttps:%2F%2Fstreetviewpixels-pa.googleapis.com%2Fv1%2Fthumbnail%3Fcb_client%3Dmaps_sv.tactile%26w%3D900%26h%3D600%26pitch%3D14.779220662672216%26panoid%3DXodTMRfqi6Ep4aIWmW9mOw%26yaw%3D171.1358581884293!7i16384!8i8192?entry=ttu&g_ep=EgoyMDI1MDgwNS4wIKXMDSoASAFQAw%3D%3D" class="event-button" target="_blank"><i class="fas fa-map-marker-alt"></i> Lihat Lokasi</a>
+                        <a href="https://www.google.com/maps/place/Jl.+Balai+Desa+No.6,+Losari+Timur,+Sidoharjo,+Kec.+Gedeg,+Kabupaten+Mojokerto,+Jawa+Timur+61351/@-7.4481914,112.4288452,17z/data=!3m1!4b1!4m5!3m4!1s0x2e780dff1a2720c7:0x896e3f324491594e!8m2!3d-7.4481914!4d112.4314201?entry=ttu&g_ep=EgoyMDI1MDYzMC4wIKXMDSoASAFQAw%3D%3D" class="event-button" target="_blank"><i class="fas fa-map-marker-alt"></i> Lihat Lokasi</a>
                 </div>
             </div>
         </div>
